[project]
name = "blink"
version = "0.1.0"
description = "Foundation models for time-domain astronomy"
requires-python = ">=3.12,<3.14"
dependencies = [
    "adbc-driver-postgresql>=1.11.0",
    "arrow-odbc>=10.4.1",
    "astropy>=7.2.0",
    "faker>=40.19.1",
    "lejepa",
    "lightning>=2.6.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxscript>=0.7.0",
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "peewee>=4.0.6",
    "pgvector>=0.4.2",
    "polars>=1.41.1",
    "psutil>=7.2.2",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "rich-click>=1.9.7",
    "rtoml>=0.13.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "threadpoolctl>=3.6.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "wandb>=0.27.1",
    "webdataset<=1.0.2",
    "zarr>=3.2.1",
]

[project.scripts]
blink = "blink.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=1.0.4",
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
    "tool>=0.8.0",
    "ty>=0.0.40",
]

[tool.uv.sources]
lejepa = { git = "https://github.com/galilai-group/lejepa.git" }
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "D",
    "D212",
    "D203",
    "TRY003",
    "PLR0913",
    "COM812",
    "FBT",
    "TD",
    "N812",
    "ARG002",
    "PLC0415",
    "FIX"
]
